--- a/src/scss/layouts/main-header.scss
+++ b/src/scss/layouts/main-header.scss
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: space-between;
   background-color: black;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   img {
     cursor: pointer;
   }
