--- a/src/scss/layouts/main-sidebar.scss
+++ b/src/scss/layouts/main-sidebar.scss
@@ -1,48 +1,53 @@
-.side-bar-container {
-  position: absolute;
-  background-color: black;
+.layout-container {
+  display: flex;
   height: 100%;
-  max-width: 117px;
-  z-index: 0;
-  bottom: 0;
-  left: 0;
 
   .side-bar {
     display: flex;
+    background-color: black;
+    max-width: 117px;
     flex-direction: column;
     justify-content: flex-end;
     height: 100%;
-    padding: 60px 27px;
+    padding: 0 27px;
     align-items: center;
-    margin-bottom: 60px;
 
-    .sport-icons-container {
+    .side-bar-content {
       display: flex;
+      height: 618px;
+      justify-content: space-between;
       flex-direction: column;
+      margin-bottom: 60px;
       align-items: center;
-      margin-bottom: 180px;
       .sport-icons {
-        align-items: center;
-        max-width: 64px;
-        background: #FFFFFF;
-        border-radius: 6px;
-        padding: 14px 14px;
-        margin-bottom: 20px;
+        display: flex;
+        flex-direction: column;
+        cursor: pointer;
+        .sport-icon {
+          align-items: center;
+          max-width: 64px;
+          background: #FFFFFF;
+          border-radius: 6px;
+          padding: 14px 14px;
+          margin-bottom: 20px;
+          &:hover {
+            transform: scale(1.1);
+          }
+        }
+      }
+      .copyright {
+        width: 138px;
+        margin: 0 0 60px 0;
+        cursor: pointer;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 24px;
+        color: #FFFFFF;
+        transform: rotate(-90deg);
       }
     }
 
-    .copyright {
-      //position: relative;
-      //top: -60px;
-      width: 138px;
-      margin: 0 0 60px 0;
-      font-family: 'Roboto';
-      font-style: normal;
-      font-weight: 500;
-      font-size: 12px;
-      line-height: 24px;
-      color: #FFFFFF;
-      transform: rotate(-90deg);
-    }
   }
 }
