--- a/src/scss/layouts/main-sidebar.scss
+++ b/src/scss/layouts/main-sidebar.scss
@@ -4,13 +4,14 @@
 
   .side-bar {
     display: flex;
-    background-color: black;
+    background-color: #020203;
     max-width: 117px;
     flex-direction: column;
     justify-content: flex-end;
     height: 100%;
     padding: 0 27px;
     align-items: center;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
     .side-bar-content {
       display: flex;
