--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,6 +7,7 @@
 
 // Components
 @import "./components/activity.scss";
+@import "./components/average-session.scss";
 // Page
 @import "pages/home";
 
