--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -4,15 +4,17 @@
 
   .home-title {
     margin-bottom: 77px;
+
     div {
       h2 {
-      font-weight: 500;
-      font-size: 48px;
-      line-height: 24px;
-      color: #000000;
-      margin-bottom: 41px;
+        font-weight: 500;
+        font-size: 48px;
+        line-height: 24px;
+        color: #000000;
+        margin-bottom: 41px;
+
         span {
-          color:#FF0000;
+          color: #FF0000;
         }
       }
     }
@@ -75,6 +77,7 @@
     .aside-stats {
       max-width: 258px;
       width: 100%;
+
       .nutri-stat {
         width: 100%;
         height: fit-content;
@@ -85,9 +88,11 @@
         border-radius: 5px;
         padding: 32px;
         margin-bottom: 39px;
+
         &:last-child {
           margin-bottom: 0;
         }
+
         .nutri-img {
           display: flex;
           align-items: center;
@@ -98,12 +103,15 @@
           border-radius: 6px;
           margin-right: 24px;
         }
-          .blue-icon {
-            background-color: #E9F4FB;
-          }
-        .yellow-icon {
-background-color: #FAF6E5;
+
+        .blue-icon {
+          background-color: #E9F4FB;
         }
+
+        .yellow-icon {
+          background-color: #FAF6E5;
+        }
+
         .pink-icon {
           background-color: #FBEAE4;
         }
@@ -114,6 +122,7 @@ background-color: #FAF6E5;
             font-size: 20px;
             line-height: 24px;
             color: #282D30;
+
             &:last-child {
               font-weight: 500;
               font-size: 14px;
@@ -126,4 +135,8 @@ background-color: #FAF6E5;
       }
     }
   }
+}
+
+.line {
+    background-color: linear-gradient(180 deg, #FFFFFF 0%, rgba(255, 255, 255, 0.106534) 100%)
 }
