:art: activity component style change

--- a/src/scss/components/activity.scss
+++ b/src/scss/components/activity.scss
@@ -1,13 +1,13 @@
 .top-activity-legend-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   h2 {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 15px;
     line-height: 24px;
-    /* identical to box height, or 160% */
 
 
     color: #20253A;
