--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -1,6 +1,7 @@
 .home-container {
-  margin: 0 auto 0 109px;
-  max-width: 1124px;
+  margin: 0 auto 88px 109px;
+  max-width: 1400px;
+  height: fit-content;
   width: 100%;
   @include desktop {
     margin: 0 auto 0 7%;
